--- a/templates/estadisticasScp.html
+++ b/templates/estadisticasScp.html
@@ -85,6 +85,8 @@
                     label: 'Population',
                     data: data.data,
                     //backgroundColor:'green',
+                    //backgroundColor: 'rgba(255, 99, 132, 0.6)',
+
                     backgroundColor: [
                         'rgba(255, 99, 132, 0.6)',
                         'rgba(54, 162, 235, 0.6)',
@@ -103,7 +105,7 @@
             options: {
                 title: {
                     display: true,
-                    text: 'Largest Cities In Massachusetts',
+                    text: data.titulo,
                     fontSize: 25
                 },
                 legend: {
