--- a/templates/layout.html
+++ b/templates/layout.html
@@ -23,7 +23,7 @@
 
   {% block head %} {% endblock %}
 
-  <title>Página Principal</title>
+  <title> {% block title %} Página Principal {% endblock %}</title>
 </head>
 
 <header>
@@ -50,7 +50,7 @@
     <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-          <a class="nav-link" href="#">Ajustes de cuenta</a>
+          <a class="nav-link" href="perfil">Ajustes de cuenta</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="logout">Cerrar Sesión</a>
