--- a/templates/lista.html
+++ b/templates/lista.html
@@ -2,20 +2,7 @@
 <div class="d-flex justify-content-center">
   <div class="row">
     <div class="">
-      {% with messages = get_flashed_messages() %} {% if messages %} {% for
-      message in messages %}
-      <div class="alert alert-dismissible alert-success fade show" role="alert">
-        <strong> {{ message }} </strong>
-        <button
-          type="button"
-          class="close"
-          data-dismiss="alert"
-          aria-label="Close"
-        >
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      {% endfor %} {% endif %} {% endwith %}
+        {% include "flash.html" %}
 
       <table class="table table-bordered table-striped bg-white table-sm">
         <thead>
