--- a/templates/calendar.html
+++ b/templates/calendar.html
@@ -56,13 +56,14 @@
                   <input type="datetime-local" id="login-2" class="fadeIn " name="end" />
                 </div>
 
-                <div id="Duration" class=" fadeIn w-50 ml-1" style=" white-space:nowrap;">
+                <div id="Duration" class=" fadeIn w-50 ml-1 " style=" white-space:nowrap;">
                   <label for="horas">H:</label>
 
                   <input type="number" id="horas" name="horas" min="0" placeholder="0">
                   <label for="minutos">M:</label>
 
-                  <input type="number" id="minutos" name="minutos" min="0" max="59" placeholder="0"></div>
+                  <input type="number" id="minutos" name="minutos" min="0" max="59" placeholder="0">
+                </div>
                 <select id="repe">
                   <option value="0" selected hidden>¿Desea repetir el evento?</option>
                   <option value="0">Sin repetición</option>
