--- a/templates/flash.html
+++ b/templates/flash.html
@@ -1,8 +1,9 @@
 
-      {% with messages = get_flashed_messages() %} {% if messages %} {% for
-        message in messages %}
-        <div class="alert alert-dismissible alert-success fade show" role="alert">
-          <strong> {{ message }} </strong>
+      {% with messages = get_flashed_messages(with_categories=true) %} {% if messages %} 
+      <ul class=flashes></ul>
+      {% for category, message in messages %}
+        <div class="alert alert-dismissible alert-{{ category }} fade show" role="alert">
+          <li class="{{ category }}">{{ message }}</li>
           <button
             type="button"
             class="close"
@@ -12,4 +13,7 @@
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
-        {% endfor %} {% endif %} {% endwith %}
+        {% endfor %}
+      </ul>
+      {% endif %} 
+    {% endwith %}
