--- a/templates/perfil1.html
+++ b/templates/perfil1.html
@@ -15,15 +15,13 @@
 	<div class="row">
 
 
-		<div class="col-md-3 ">
+		<div class="col-md-3 fadeIn">
 		     <div class="list-group ">
               <a href="#" class="list-group-item list-group-item-action active">Información Personal</a>
               <a href="#" class="list-group-item list-group-item-action">Ajustes</a>
-              
-              
-            </div> 
+          </div> 
 		</div>
-		<div class="col-md-9">
+		<div class="col-md-9 fadeInDown">
 		    <div class="card">
 		        <div class="card-body">
 		            <div class="row">
@@ -38,17 +36,15 @@
                               <div class="form-group row">
                                 <label for="username" class="col-4 col-form-label">Nombre completo*</label> 
                                 <div class="col-8">
-                                  <input id="username" name="fullname" value =" {{ session["name"] }}" class="form-control here" required="required" type="text" placeholder="Introduzca su nombre completo">
+                                  <input id="username" name="fullname" value ="{{ session["name"] }}" class="form-control here" required="required" type="text" placeholder="Introduzca su nombre completo">
                                 </div>
                               </div>
-
                               <div class="form-group row">
                                 <label for="text" class="col-4 col-form-label">Teléfono*</label> 
                                 <div class="col-8">
                                   <input id="text" name="phone" value="{{ session["phone"] }}" class="form-control here" required="required" type="text" placeholder="Introduzca su número de teléfono">
                                 </div>
-                              </div>
-                              
+                              </div> 
                               <div class="form-group row">
                                 <label for="email" class="col-4 col-form-label">Email*</label> 
                                 <div class="col-8">
@@ -63,8 +59,7 @@
                                     <option value="0">Usuario</option>
                                   </select>
                                 </div>
-                              </div>
-                        
+                              </div>                        
                               <div class="form-group row">
                                 <label for="publicinfo" class="col-4 col-form-label">Mensaje de Bienvenida</label> 
                                 <div class="col-8">
@@ -72,26 +67,32 @@
                                 </div>
                               </div>
                               <div class="form-group row">
-                                <label for="newpass" class="col-4 col-form-label">Nueva contraseña</label> 
+                                <input type="checkbox" id="con" onclick="myFunction()" > Cambiar contraseña  <br>
+                                <input type="text" id="bool" name="bool" value="0" style="display:none">                                
+                              </div> 
+                            <div id="cont" style="display:none">
+                              <div class="form-group row">
+                                <label for="newpass" class="col-4 col-form-label">Nueva contraseña*</label> 
                                 <div class="col-8">
-                                  <input id="newpass" name="newpass" placeholder="Introduzca la nueva contraseña" class="form-control here" type="text" required="required">
+                                  <input id="newpass" name="newpass" placeholder="Introduzca la nueva contraseña" value="" class="form-control here" type="password" >
                                 </div>
                               </div> 
                               <div class="form-group row">
-                                <label for="repass" class="col-4 col-form-label">Repetir contraseña</label> 
+                                <label for="repass" class="col-4 col-form-label">Repetir contraseña*</label> 
                                 <div class="col-8">
-                                  <input id="newpass" name="repass" placeholder="Repita la nueva contraseña" class="form-control here" type="text" required="required">
+                                  <input id="newpass" name="repass" placeholder="Repita la nueva contraseña" value="" class="form-control here" type="password" >
                                 </div>
                               </div> 
+                            </div>
                               <div class="form-group row">
                                 <div class="offset-4 col-8">
-                                  <button name="submit" type="submit" class="btn btn-primary">Actualizar Perfil</button>
+                                  <button name="submit" type="submit" class="btn-primary">Actualizar Perfil</button>
                                 </div>
                               </div>
-                            </form>
+                              * Campo obligatorio
+                        </form>
 		                </div>
-		            </div>
-		            
+		            </div>		            
 		        </div>
 		    </div>
 		</div>
@@ -103,26 +104,27 @@
 {% block script %}
 
 <script>
-$(document).ready(function() {
 
+function myFunction() {
+  // Get the checkbox
+  var checkBox = document.getElementById("con");
+  // Get the output text
+  var text = document.getElementById("cont");
+  
+  var bool = document.getElementById("bool");
+
+
+  // If the checkbox is checked, display the output text
+  if (checkBox.checked == true){
+    text.style.display = "block";
+    bool.value= "1"
     
-var readURL = function(input) {
-    if (input.files && input.files[0]) {
-        var reader = new FileReader();
-
-        reader.onload = function (e) {
-            $('.avatar').attr('src', e.target.result);
-        }
-
-        reader.readAsDataURL(input.files[0]);
-    }
+  } else {
+    text.style.display = "none"; 
+    bool.value= "0"
+  }
 }
 
-
-$(".file-upload").on('change', function(){
-    readURL(this);
-});
-});
 </script>
 
 
