--- a/templates/calendarScp.html
+++ b/templates/calendarScp.html
@@ -123,12 +123,15 @@
 
     window.onload = function () {
 
+        var oculto = document.getElementById("oculto");
+
         var repe = document.getElementById("repe");
         var repeSelected;
         var showD = document.getElementById("ShowD");
 
         var showS = document.getElementById("ShowS");
         var showM = document.getElementById("ShowM");
+        oculto.style.display = "";
         showD.style.display = "none";
         showS.style.display = "none";
         showM.style.display = "none";
@@ -171,10 +174,14 @@
         var selectedOption;
         var usrSelected;
         document.getElementById("borradoBTN").addEventListener("click", myFunction);
+        document.getElementById("manualBTN").addEventListener("click", myFunctionManual);
+        document.getElementById("manualBTN").addEventListener("click", myFunctionAuto);
         var usr = document.getElementById("usuarioBorrado");
         var obj = 0;
         var date;
         var idBorrado = 0;
+        var manualMode = 0 ;
+        
 
 
         select.addEventListener("change", function () {
@@ -207,7 +214,90 @@
             borradoItem()
             console.log("Hola " + selectedOption.value + "Fin");
         }
+        function myFunctionManual() {
+            
+            console.log("Hola ");
+            $.post(
+                "/manual",
+                
+                function (err, req, resp) {
+                    //window.location.reload(true); 
+                }
+                        );
+                        //window.location.reload(true);
+                        
+                        fetch("/manualdata")
+            .then(res => res.json())
+            .then(out => {
+                
+                miFuncion(out);
+        })
+        .catch(error => console.error('Error al obtener datos de estadísticas'))
+        
+        
+        
+        function miFuncion(data) {
+            console.log("1");
+            if (data.disabled == "disabled"){
+                console.log("2")
+                document.getElementById("borra").disabled = true;
+                document.getElementById("auto").disabled = true;
+                document.getElementById("maual").disabled = false;
+            }else{
+                console.log("3")
+                document.getElementById("borra").disabled = false;
+                document.getElementById("auto").disabled = false;
+                document.getElementById("maual").disabled = false;
+            }
+            
+        console.log(data)
+        }
+                
+        }
 
+        function myFunctionAuto() {
+            
+            console.log("Hola ");
+            $.post(
+                "/auto",
+                
+                function (err, req, resp) {
+                    //window.location.reload(true); 
+                }
+                        );
+                        //window.location.reload(true);
+                        
+                        fetch("/manualdata")
+            .then(res => res.json())
+            .then(out => {
+                
+                miFuncion(out);
+        })
+        .catch(error => console.error('Error al obtener datos de estadísticas'))
+        
+        
+        
+        function miFuncion(data) {
+            console.log("1");
+            if (data.disabled == "disabled"){
+                console.log("2")
+                document.getElementById("borra").disabled = true;
+                document.getElementById("auto").disabled = true;
+                document.getElementById("maual").disabled = false;
+            }else{
+                console.log("3")
+                document.getElementById("borra").disabled = false;
+                document.getElementById("auto").disabled = false;
+                document.getElementById("maual").disabled = false;
+            }
+            
+        console.log(data)
+        }
+                
+        }
+
+
+        
 
         function borradoItem() {
 
