--- a/templates/layout.html
+++ b/templates/layout.html
@@ -62,9 +62,10 @@
 
 <body onload="startTime()">
   <div id="wrap">
-    <div id="main" class=" clear-top">
+    <div id="main" class=" clear-top">        
       <h4 class="d-flex justify-content-end badge-dark">
-        Hora actual del sistema <span class="badge badge-danger ml-3" id="reloj"></span>
+          <span class=" justify-content-start badge badge-warning mr-3" id="manualmode"></span>
+        Hora actual del sistema <span class="badge badge-danger ml-3" id="reloj"></span> 
       </h4>
       <span class="badge badge-dark"></span>
 
