--- a/templates/modales.html
+++ b/templates/modales.html
@@ -11,13 +11,13 @@
       </div>
 
       <div class="modal-body">
-        <h6>  Al activar el modo manual se desactivaran las restricciones y condiciones para poder crear y borrar un evento.<br/><br/>
-           Permitiendo que pueda haber más de un evento simultáneamente y realizar borrado masivos<br/><br/>
-          Los cambios se guardarán automáticamente</h6>
+        <h6>  Al activar el modo manual se desactivaran las restricciones y condiciones para poder crear y borrar un evento.<br/>
+           Permitiendo que pueda haber más de un evento simultáneamente y realizar borrado masivos.<br/><br/>
+          Para desactivar el Modo Manual pulse el botón "Modo automático" o cierre e inicie sesión</h6>
       </div>
 
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">
+        <button type="button" class="btn btn-secondary" id="manualCerrar" data-dismiss="modal">
           Cancelar
         </button>
         <button type="button" id="manualBTN" class="btn btn-warning">
@@ -49,7 +49,7 @@
       </div>
 
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">
+        <button type="button" class="btn btn-secondary" id="autoCerrar" data-dismiss="modal">
           Cancelar
         </button>
         <button type="button" id="autoBTN" class="btn btn-primary">
