--- a/templates/reloj.html
+++ b/templates/reloj.html
@@ -31,7 +31,11 @@
           YYYY + "-" + MM + "-" + DD + " " + hh + ":" + mm + ":" + ss;
 
         // will output something like "2019-02-14 11:04:42"
-
+        if (out.estado == "0") {
+          document.getElementById("manualmode").innerHTML = "";
+        } else {
+          document.getElementById("manualmode").innerHTML = "Modo Manual";
+        }
         document.getElementById("reloj").innerHTML = date_string;
       })
       .catch(err => console.error(err));
