--- a/templates/main.html
+++ b/templates/main.html
@@ -19,7 +19,7 @@
   <div class="colorPrueba fadeIn first mx-auto align-self-start">
     <ul class="list-group">
       <li class="list-group-item">
-        Humedad: <span class="badge badge-danger ml-3" id="hum"></span>
+        Humedad: <span class=" ml-3" id="hum"></span>
       </li>
       <li class="list-group-item">Temperatura:</li>
       <li class="list-group-item">Distancia:</li>
