--- a/templates/estadoScp.html
+++ b/templates/estadoScp.html
@@ -14,6 +14,6 @@
     alarma = data.movimiento;
     temperaturaCPU = data.temperaturaCPU;
     usoCPU = data.usoCPU;
-    document.getElementById("hum").innerHTML = humedad;
+    document.getElementById("hum").innerHTML = humedad.substr(-7);
   }
 </script>
