--- a/templates/main.html
+++ b/templates/main.html
@@ -21,12 +21,24 @@
       <li class="list-group-item">
         Humedad: <span class=" ml-3" id="hum"></span>
       </li>
-      <li class="list-group-item">Temperatura:</li>
-      <li class="list-group-item">Distancia:</li>
-      <li class="list-group-item">Aviso:</li>
-      <li class="list-group-item">Alarma:</li>
-      <li class="list-group-item">Temperatura del Sistema:</li>
-      <li class="list-group-item">Uso del sistema:</li>
+      <li class="list-group-item">
+        Temperatura: <span class=" ml-3" id="tem"></span>
+      </li>
+      <li class="list-group-item">
+        Distancia: <span class=" ml-3" id="dis"></span>
+      </li>
+      <li class="list-group-item">
+        Aviso: <span class=" ml-3" id="av"></span>
+      </li>
+      <li class="list-group-item">
+        Alarma: <span class=" ml-3" id="al"></span>
+      </li>
+      <li class="list-group-item">
+        Temperatura del Sistema: <span class=" ml-3" id="cpuT"></span>
+      </li>
+      <li class="list-group-item">
+        Uso del sistema: <span class=" ml-3" id="cpu"></span>
+      </li>
     </ul>
   </div>
   <!-- Derecha -->
