--- a/templates/estadoScp.html
+++ b/templates/estadoScp.html
@@ -17,9 +17,9 @@
     document.getElementById("hum").innerHTML = humedad.substr(20);
     document.getElementById("tem").innerHTML = temperatura.substr(20);
     document.getElementById("dis").innerHTML = distancia.substr(20);
-    document.getElementById("av").innerHTML = humedad.substr(20);
-    document.getElementById("al").innerHTML = humedad.substr(20);
-    document.getElementById("cpuT").innerHTML = humedad.substr(20);
-    document.getElementById("cpu").innerHTML = humedad.substr(20);
+    document.getElementById("av").innerHTML = movimiento.substr(20);
+    document.getElementById("al").innerHTML = alarma.substr(20);
+    document.getElementById("cpuT").innerHTML = temperaturaCPU.substr(20);
+    document.getElementById("cpu").innerHTML = usoCPU.substr(20);
   }
 </script>
