--- a/templates/estadoScp.html
+++ b/templates/estadoScp.html
@@ -1,37 +1,29 @@
 <script>
-  var humedad;
-  var temperatura;
-  var distancia;
-  var movimiento;
-  var alarma;
-  var temperaturaCPU;
-  var usoCPU;
-
-  function actualiza(data) {
-    humedad = data.humedad;
-    temperatura = data.temperatura;
-    distancia = data.distancia;
-    movimiento = data.movimiento;
-    alarma = data.alarma;
-    temperaturaCPU = data.temperaturaCPU;
-    usoCPU = data.usoCPU;
-
-    document.getElementById("hum").innerHTML = humedad.substr(20);
-    document.getElementById("tem").innerHTML = temperatura.substr(20);
-    document.getElementById("dis").innerHTML = distancia.substr(20);
-    document.getElementById("av").innerHTML = movimiento.substr(20);
-    document.getElementById("al").innerHTML = alarma.substr(20);
-    document.getElementById("cpuT").innerHTML = temperaturaCPU.substr(20);
-    document.getElementById("cpu").innerHTML = usoCPU.substr(20);
-  }
   function estado() {
     fetch("/state")
       .then(res => res.json())
       .then(out => {
         console.log(out);
-        actualiza(out);
+        miFuncion(out);
       })
       .catch(error => console.error("Error al obtener datos de estadísticas"));
     var t = setTimeout(estado, 10000);
+    function miFuncion(data) {
+      humedad = data.humedad;
+      temperatura = data.temperatura;
+      distancia = data.distancia;
+      movimiento = data.movimiento;
+      alarma = data.alarma;
+      temperaturaCPU = data.temperaturaCPU;
+      usoCPU = data.usoCPU;
+
+      document.getElementById("hum").innerHTML = humedad.substr(20);
+      document.getElementById("tem").innerHTML = temperatura.substr(20);
+      document.getElementById("dis").innerHTML = distancia.substr(20);
+      document.getElementById("av").innerHTML = movimiento.substr(20);
+      document.getElementById("al").innerHTML = alarma.substr(20);
+      document.getElementById("cpuT").innerHTML = temperaturaCPU.substr(20);
+      document.getElementById("cpu").innerHTML = usoCPU.substr(20);
+    }
   }
 </script>
