--- a/templates/estadoScp.html
+++ b/templates/estadoScp.html
@@ -7,7 +7,7 @@
         miFuncion(out);
       })
       .catch(error => console.error("Error al obtener datos de estadísticas"));
-    var t = setTimeout(estado, 10000);
+    //var pp = setTimeout(estado, 10000);
     function miFuncion(data) {
       humedad = data.humedad;
       temperatura = data.temperatura;
